--- a/src/App.css
+++ b/src/App.css
@@ -1,5 +1,5 @@
 .App {
-  text-align: center;
+  text-align: left;
 }
 
 .App-logo {
@@ -27,6 +27,50 @@
 .App-link {
   color: #61dafb;
 }
+
+.header {
+  margin-left: 50px;
+  margin-top: 30px;
+}
+
+.select {
+  font-size: 18px;
+  margin-left: 60px;
+}
+
+.container {
+  text-align: center;
+  margin: 60px 100px;
+}
+
+.left {
+  text-align: left;
+  padding-left: 20px;
+}
+
+.right {
+  text-align: left;
+  padding-left: 200px;
+}
+
+.title {
+  font-size: 24px;
+  margin-bottom: 3px;
+  color: #0f0f0f;
+}
+
+.rank {
+  float: left;
+  padding-top: 30px;
+}
+
+.pic {
+  float: left;
+  width: 100px;
+  margin-left: 30px;
+  text-align: right;
+}
+
 
 @keyframes App-logo-spin {
   from {
